<resources>
    <string name="app_name" translatable="false"><![CDATA[TV & Film Reviews]]></string>
    <string name="search">Search</string>
    <string name="dummy_dummy" translatable="false">Dummy</string>
    <string name="search_movies_tv_series_actors">Search</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="credits">Credits</string>
    <string name="title_activity_main4">MainActivity4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open">Open\n</string>
    <string name="close">Close</string>
    <string name="app_version">Version</string>
    <string name="search_options">Settings</string>
    <string name="tv_shows">TV Shows</string>
    <string name="movies">Movies</string>
    <string name="type">type</string>
    <string name="site">site</string>
    <string name="title">title</string>
    <string name="official">Official</string>
    <string name="unofficial">Unofficial</string>
    <string name="q_mark">\?</string>
    <string name="no_results_found">No results found</string>
    <string name="try_another_search">Try another search</string>
    <string name="powered_by">powered by</string>
    <string name="mature_content_txt">you may get results that contain mature \nor sexually explicit content by turning this on!</string>
    <string name="include_explicit_content_txt">include explicit content</string>
    <string name="top_rated_movies">Top rated movies</string>
    <string name="trending_today">Trending today</string>
    <string name="genres">Genres</string>
    <string name="no_trailer_found">no trailer available</string>
    <string name="user_score">User score</string>
    <string name="no_info">No information available</string>
    <string name="season_poster">Season poster</string>
    <string name="next">next</string>
    <string name="starring">Starring</string>
    <string name="no_review">no reviews found</string>
    <string name="air_date">Air date</string>
    <string name="born">Born</string>
    <string name="about">About</string>
    <string name="where_to_watch">Where to watch</string>
    <string name="justwatch_attribution">Data by JustWatch</string>
    <string name="watch_region">Watch region</string>
    <string name="watch_region_hint">Select country</string>
    <string name="watch_region_helper">Controls Where to Watch results. Device region is used when not set.</string>
    <string name="watch_region_device_default">Use device region</string>
    <string name="watch_region_empty">No streaming options in this region</string>
    <string name="watch_region_chip">%1$s ▾</string>
    <string name="certfications">Rated</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Login</string>
    <string name="login_with_tmdb">TMDB Login</string>
    <string name="login_tmdb_message">Sign in with your TMDB account in the browser, then approve access to continue.</string>
    <string name="continue_with_tmdb">Continue with TMDB</string>
    <string name="login_success">Logged in successfully</string>
    <string name="login_denied">Login was cancelled</string>
    <string name="login_required">Please log in to add movies to your watchlist</string>
    <string name="login_required_watchlist">Please log in to view your watchlist</string>
    <string name="added_to_watchlist">Added to watchlist</string>
    <string name="removed_from_watchlist">Removed from watchlist</string>
    <string name="watchlist_error">Could not update watchlist</string>
    <string name="watchlist">Watchlist</string>
    <string name="watchlist_empty">Your watchlist is empty</string>
    <string name="watchlist_empty_tv">Your TV watchlist is empty</string>
    <string name="watchlist_load_error">Error getting watchlist</string>
    <string name="remove_from_watchlist_title">Remove from watchlist</string>
    <string name="remove_from_watchlist_message">Remove \"%1$s\" from your watchlist?</string>
    <string name="my_lists">My Lists</string>
    <string name="favorites">Favorites</string>
    <string name="rated">Rated</string>
    <string name="login_required_favorites">Please log in to view your favorites</string>
    <string name="login_required_rate">Please log in to rate titles</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="favorites_error">Could not update favorites</string>
    <string name="favorites_empty">Your favorites list is empty</string>
    <string name="favorites_empty_tv">Your TV favorites list is empty</string>
    <string name="favorites_load_error">Error getting favorites</string>
    <string name="remove_from_favorites_title">Remove from favorites</string>
    <string name="remove_from_favorites_message">Remove \"%1$s\" from your favorites?</string>
    <string name="favorite">Favorite</string>
    <string name="rate">Rate</string>
    <string name="rate_title">Rate this title</string>
    <string name="your_rating_value">Your rating: %1$.1f</string>
    <string name="rating_saved">Rating saved</string>
    <string name="rating_removed">Rating removed</string>
    <string name="rating_error">Could not update rating</string>
    <string name="clear_rating">Clear</string>
    <string name="rated_empty">You haven\'t rated any movies yet</string>
    <string name="rated_empty_tv">You haven\'t rated any TV shows yet</string>
    <string name="rated_load_error">Error getting rated titles</string>
    <string name="remove_rating_title">Remove rating</string>
    <string name="remove_rating_message">Remove your rating for \"%1$s\"?</string>
    <string name="remove">Remove</string>
    <string name="popular_tv_shows">Popular TV Shows</string>
    <string name="in_app_update_exception">in-app-update-exception</string>
    <string name="notice_nthis_product_uses_the_tmdb_api_but_is_not_endorsed_or_certified_by_tmdb">NOTICE! \n\nThis product uses the TMDB API but is NOT endorsed or certified by TMDB.</string>
    <string name="cast_guest">Cast/Guest</string>
    <string name="information">Information</string>
    <string name="prev">prev</string>
    <string name="reviews">Reviews</string>
    <string name="trailers">Trailers</string>
    <string name="suggested_films">Suggested films</string>
    <string name="production">Production</string>
    <string name="status">Status</string>
    <string name="cast">Cast</string>
    <string name="collection">Collection</string>
    <string name="name">Name</string>
    <string name="birth_place">Birth place</string>
    <string name="known_for">Known for</string>
    <string name="language_translations">Language translations</string>
    <string name="episode_preview">episode preview</string>
    <string name="alert">Alert!</string>
    <string name="language_change_requires_a_restart">language change requires a restart\n\n</string>
    <string name="translation_warning">please note! some information might not show due to missing language translations.</string>
    <string name="restart_now">Restart Now</string>
    <string name="not_now">Not Now</string>
    <string name="warning">Warning!</string>
    <string name="content_may_contain_explicit_images">Content may contain explicit images!</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>
    <string name="dark">Dark</string>
    <string name="system_default">System default</string>
    <string name="light">Light</string>
    <string name="view_mode">View Mode</string>
    <string name="notice">Notice!</string>
    <string name="settings">Settings</string>
    <string name="posters">Posters</string>
    <string name="poster_collection">Poster collection</string>
    <string name="posterimage" translatable="false">PosterImage</string>
    <string name="poster" translatable="false">poster</string>
    <string name="previous_poster">Previous poster</string>
    <string name="next_poster">Next poster</string>
    <string name="download_poster">Download poster</string>
    <string name="view_all_posters">View all</string>
    <string name="poster_index">%1$d / %2$d</string>
    <string name="poster_download_success">Saved to Pictures. Artwork via TMDB — personal use only; not for redistribution.</string>
    <string name="poster_download_failed">Couldn\'t save poster</string>
    <string name="poster_download_unavailable">No poster to save</string>
    <string name="movie_logo" translatable="false">movie logo</string>
    <string name="movie_collection" translatable="false">movie collection</string>
    <string name="search_image" translatable="false">search image</string>
    <string name="tv_logo" translatable="false">tv logo</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="pop_movies">Popular Movies</string>
    <string name="loading_more">Loading more</string>
    <string name="scroll_to_top">scroll to top</string>
    <string name="clear_recent_searches">Clear</string>
    <string name="preferences">Preferences</string>
    <string name="appearance">Appearance</string>
    <string name="account">Account</string>
    <string name="search_settings">Search</string>
    <string name="sign_in">Sign in with TMDB</string>
    <string name="custom_lists">My Lists</string>
</resources>