<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/drawer_movies"
        android:title="@string/pop_movies" />

    <item
        android:id="@+id/drawer_tv"
        android:title="@string/tv_shows" />

    <item
        android:id="@+id/drawer_search"
        android:title="@string/search" />

    <item
        android:id="@+id/drawer_watchlist"
        android:title="@string/watchlist" />

    <item
        android:id="@+id/drawer_favorites"
        android:title="@string/favorites" />

    <item
        android:id="@+id/drawer_lists"
        android:title="@string/custom_lists" />

    <!--<item
        android:id="@+id/drawer_login"
        android:title="@string/login" />-->

    <item
        android:id="@+id/drawer_settings"
        android:title="@string/settings" />

</menu>